done: Edit font styling for website, Change background color of website, change header to video with text overlay, fix left spacing on featured projects section using padding, modify contact icons and text to fit better; todo: Optimize dynamic rezing on the website

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -158,6 +158,7 @@ hr {
   width: 100vw;
   color: #40E0D0;
   margin: 0 !important;
+  padding-left: 20px;
   overflow-x: hidden;
 }
 
